--- a/index.htm
+++ b/index.htm
@@ -815,7 +815,7 @@
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        <label for="current_site">Site location and No.</label>
+                                        <label for="current_site">Site location and No.*</label>
                                         <select name="current_site" id="current_site" class="form-control" >
                                             <option value="">Select a site</option>                                    
                                                                                             <option value="Head Office">Head Office</option>
@@ -1395,7 +1395,7 @@
                             </div>
                             <div class="col-md-4">
                                 <div class="form-group">
-                                    <label for="remove_current_site">Site location and No.</label>
+                                    <label for="remove_current_site">Site location and No.*</label>
                                     <select name="remove_current_site" id="remove_current_site" class="form-control" >
                                         <option value="">Select a site</option>                                    
                                                                                     <option value="Head Office">Head Office</option>
