--- a/index.htm
+++ b/index.htm
@@ -1308,8 +1308,8 @@
                                         <label for="training_day">Training Day: *</label>
                                         <select name="training_day" id="training_day" class="form-control" >
                                             <option value="">Select a training day</option>                                    											    
-											    <option value="Tuesday - 23-Mar-21 (32 Seats available)">Tuesday - 23-Mar-21 (available)</option>
-											    <option value="Thursday - 25-Mar-21 (32 Seats available)">Thursday - 25-Mar-21 (available)</option>
+											    <option value="Tuesday - 23-Mar-21 (available)">Tuesday - 23-Mar-21 (available)</option>
+											    <option value="Thursday - 25-Mar-21 (available)">Thursday - 25-Mar-21 (available)</option>
                                                                                     </select>      
                                     </div>                          
                                 </div>
