--- a/index.htm
+++ b/index.htm
@@ -1305,11 +1305,14 @@
                                 </div>
                                 <div class="col-md-6 training_day_col" style="display: none;" >
                                     <div class="form-group">
-                                        <label for="training_day">Training Day: *</label>
+                                        <label for="training_day">Pie Face Training Session 
+						(please allow 3 days to complete Step Up training modules – you will not be able to attend session if you’ve not completed 100% of your modules) *</label>
                                         <select name="training_day" id="training_day" class="form-control" >
-                                            <option value="">Select a training day</option>                                    											    				    		    					        				    
-											    <option value="Thursday - 15-April-21 (available)">Thursday - 15-April-21 (available)</option>
+                                            <option value="">Select a training day</option>                                    											    				    		    					        				    			    
 											    <option value="Tuesday - 20-April-21 (available)">Tuesday - 20-April-21 (available)</option>
+											    <option value="Thursday - 22-April-21 (available)">Thursday - 22-April-21 (available)</option>
+											    <option value="Tuesday - 27-April-21 (available)">Tuesday - 27-April-21 (available)</option>
+											    <option value="Thursday - 29-April-21 (available)">Thursday - 29-April-21 (available)</option>
 						
                                                                                     </select>      
                                     </div>                          
