--- a/index.htm
+++ b/index.htm
@@ -1306,7 +1306,7 @@
                                 <div class="col-md-6 training_day_col" style="display: none;" >
                                     <div class="form-group">
                                         <label for="training_day">Pie Face Training Session 
-						(please allow 3 days to complete Step Up training modules – you will not be able to attend session if you’ve not completed 100% of your modules) *</label>
+						(please allow 3 days to complete Step Up training modules – if the modules are not 100% complete, you will not be allowed to attend the session) *</label>
                                         <select name="training_day" id="training_day" class="form-control" >
                                             <option value="">Select a training day</option>                                    											    				    		    					        				    			    
 											    <option value="Tuesday - 20-April-21 (available)">Tuesday - 20-April-21 (available)</option>
