--- a/index.htm
+++ b/index.htm
@@ -1276,6 +1276,7 @@
 											    <option value="8827 ALICE SPRINGS">8827 ALICE SPRINGS</option>
                                                                                             <option value="8830 PINE CREEK">8830 PINE CREEK</option>					
                                                                                     </select>    
+			              </div>
                                    </div>
                                 </div>
                                 <div class="col-md-6">
