--- a/index.htm
+++ b/index.htm
@@ -1276,15 +1276,13 @@
 											    <option value="8827 ALICE SPRINGS">8827 ALICE SPRINGS</option>
                                                                                             <option value="8830 PINE CREEK">8830 PINE CREEK</option>					
                                                                                     </select>    
-			              </div>
-                                   </div>
+</div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group">
                                         <label for="position">Position: *</label>
                                         <select name="position" id="position" class="form-control" >
-                                            <option value="">Select a position</option>                                    
-                                                                                            <option value="Console Operator (CO)">Console Operator (CO)</option>   
+                                            <option value="">Select a position</option>                                                                                                                             
                                                                                             <option value="Site Manager">Site Manager</option>
                                                                                             <option value="CA/Franchisee ">CA/Franchisee </option>
 											    <option value="Kitchen Hand (KH)">Kitchen Hand (KH)</option>
@@ -1294,10 +1292,32 @@
 	                                                                                    <option value="FACILITIY EMPLOYEE (Dealer only)">FACILITIY EMPLOYEE (Dealer only)</option>
 											    <option value="FACILITIY SUPERVISOR (Dealer only)">FACILITIY SUPERVISOR (Dealer only)</option>
 											    <option value="FACILITIY MANAGER (Dealer only)">FACILITIY MANAGER (Dealer only)</option>
-                                                                                            <option value="Other">Other</option>            
-                                           					    </select>                                               
-                               </div>
+                                                                                            <option value="Other">Other</option>      
+                                            
+                                        </select>                                
+                                    </div>
+                                </div>
                             </div>
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label for="email">Employee personal email: *</label>
+                                        <input type="email" name="email" id="email" class="form-control" value="" >
+                                    </div>
+                                </div>
+                                <div class="col-md-6 training_day_col" style="display: none;" >
+                                    <div class="form-group">
+                                        <label for="training_day">Training day: *</label>
+                                        <select name="training_day" id="training_day" class="form-control" >
+                                            <option value="">Select a training day</option>                                    
+                                                                                            <option value="Thursday - 25-Feb-21 (35 Seats available)">Thursday - 25-Feb-21(35 Seats available)</option>
+                                                                                            <option value="Tuesday - 2-Mar-21 (31 Seats available)">Tuesday - 2-Mar-21 (31 Seats available)</option>
+											    <option value="Thursday - 4-Mar-21 (35 Seats available)">Thursday - 4-Mar-21(35 Seats available)</option>
+                                                                                            <option value="Tuesday - 9-Mar-21 (31 Seats available)">Tuesday - 9-Mar-21(31 Seats available)</option>
+                                                                                    </select>      
+                                    </div>                          
+                                </div>
+                            </div>					    
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="form-group">
