--- a/index.htm
+++ b/index.htm
@@ -1282,7 +1282,8 @@
                                     <div class="form-group">
                                         <label for="position">Position: *</label>
                                         <select name="position" id="position" class="form-control" >
-                                            <option value="">Select a position</option>                                                                                                                             
+                                            <option value="">Select a position</option>      
+											    <option value="Console Operator (CO)">Console Operator (CO)</option>
                                                                                             <option value="Site Manager">Site Manager</option>
                                                                                             <option value="CA/Franchisee ">CA/Franchisee </option>
 											    <option value="Kitchen Hand (KH)">Kitchen Hand (KH)</option>
