--- a/index.htm
+++ b/index.htm
@@ -1348,7 +1348,7 @@
                                 <div class="col-md-6 id_card_col" style="display: none;">
                                     <div class="form-group">
                                         <label for="id_card">ID: Passport/Driver Licence *</label>
-                                        <input type="file" name="id_card" id="id_card" class="form-control" value="" accept="image/*"> >
+                                        <input type="file" name="id_card" id="id_card" class="form-control" value="" accept="image/*"> 
                                     </div>
                                 </div>
                             </div>
