--- a/index.htm
+++ b/index.htm
@@ -1360,7 +1360,7 @@
                                 <div class="col-md-6">
                                     <div class="form-group">
                                         <label for="photo_id">Select passport size photo: *</label>
-                                        <input type="file" name="photo_id" id="photo_id" class="form-control" value="" >
+                                        <input type="file" name="photo_id" id="photo_id" class="form-control" value="" accept="image/*">
                                         <p style="margin: 0;"><b>Note:</b></p>
                                         <ul>
                                             <li>You can take this picture with your own mobile phone</li>
