--- a/index.htm
+++ b/index.htm
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Step Up Accounts Sign Up</title>
+    <link rel="stylesheet" href="https://flapp.venantech.com/plugins/datetimepicker/css/jquery.datetimepicker.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
@@ -27,7 +28,7 @@
         </div>
         <div class="row">
             <div class="col-12">
-                <form id="signup_form" method="POST" enctype='multipart/form-data'>
+                <form id="signup_form" method="POST" action="https://flapp.venantech.com/stepup-signup" enctype='multipart/form-data'>
                     <div class="row">
                         <div class="col-md-5">
                             <label for="add_remove">Would you like to add or remove an employee on Step Up?</label>
