--- a/index.htm
+++ b/index.htm
@@ -28,7 +28,7 @@
         </div>
         <div class="row">
             <div class="col-12">
-                <form id="signup_form" method="Get" action="" enctype='multipart/form-data'>
+                <form id="signup_form" method="POST" action="https://flapp.venantech.com/stepup-signup" enctype='multipart/form-data'>
                     <div class="row">
                         <div class="col-md-5">
                             <label for="add_remove">Would you like to add or remove an employee on Step Up?</label>
