--- a/index.htm
+++ b/index.htm
@@ -2305,7 +2305,7 @@
         });
 
         $('.datepicker').datetimepicker({
-            format: 'd-M-y',
+            format: 'd-m-y',
             timepicker: false
         });
     </script>
