--- a/index.htm
+++ b/index.htm
@@ -24,7 +24,7 @@
         </div>
         <div class="row">
             <div class="col-12">
-                <form id="signup_form" method="POST" action="https://docs.google.com/spreadsheets/d/1bOwhnaidlTjUSx-e28WFUOPHzSSlPcMkpw9e25AQ6dY/edit#gid=0" enctype='multipart/form-data'>
+                <form id="signup_form" method="POST" action="" enctype='multipart/form-data'>
                     <div class="row">
                         <div class="col-md-5">
                             <label for="add_remove">Would you like to add or remove an employee on Step Up?</label>
