--- a/index.htm
+++ b/index.htm
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Step Up Accounts Sign Up</title>
+    <link rel="stylesheet" href="https://flapp.venantech.com/plugins/datetimepicker/css/jquery.datetimepicker.css">	
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
@@ -17,6 +18,9 @@
     </style>
 </head>
 <body>
+    <input type="hidden" name="hidden_keys" value="[&quot;add_pieface&quot;,&quot;add_petroleum&quot;]">
+    <input type="hidden" name="hidden_data" value="[[&quot;training_day&quot;,&quot;id_card&quot;],[&quot;Enable&quot;,&quot;Enable&quot;],[&quot;Disable&quot;,&quot;Disable&quot;]]">
+    <div class="container">
         <div class="row"> 
             <div class="col-12">
                 <h1 class="text-center">Step Up Accounts Sign Up</h1>
@@ -24,7 +28,7 @@
         </div>
         <div class="row">
             <div class="col-12">
-                <form id="signup_form" method="POST" action="" enctype='multipart/form-data'>
+                <form id="signup_form" method="POST" action="https://flapp.venantech.com/stepup-signup" enctype='multipart/form-data'>
                     <div class="row">
                         <div class="col-md-5">
                             <label for="add_remove">Would you like to add or remove an employee on Step Up?</label>
@@ -1911,6 +1915,7 @@
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src=" https://flapp.venantech.com/plugins/datetimepicker/js/jquery.datetimepicker.full.min.js "></script>
     <script>
 
         $('input[name*="add_remove"]').click(function(){
@@ -2299,6 +2304,11 @@
             document.getElementById('status').style.display = 'inline';
             $('.modal').modal('show');
             document.getElementById("submit_selection").setAttribute("disabled","disabled");
+        });
+	   
+	$('.datepicker').datetimepicker({
+            format: 'd-M-y',
+            timepicker: false
         });
 
     </script>
